# sortvisualizer

./: .clang-format  .clangd  .gitignore  README.md  config.h  meson.build  pyproject.toml  pyrightconfig.json  run.py
.cache/clangd/index/: config.h.0C12A2C863BB3081.idx  number.c.07804EEF604E3F32.idx  number.h.DF0FAF7A0E8CF76D.idx  sortvisualizer.c.BEFCEF08C02AE89E.idx
sortvisualizer/: __init__.py  app.py  number.py  sorter.py
src/: array.c  array.h  main.c  number.c  number.h  sortvisualizer.c  util.c  util.h
src/algorithms/: algorithms.h  bubble.c  insert.c  merge.c  quick.c  select.c
src/array/: array.c  array.h  bar.c  bar.h
