[tool.poetry]
name = "sortvisualizer"
version = "0.1.0"
description = ""
authors = ["ezntek <eason@ezntek.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
raylib-py = "^4.5.0.post1"

[tool.poetry.dev-dependencies]
python = "^3.11"
black = "^23.7.0"
isort = "5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# some tools

[tool.isort]
profile = "black"
